<resources>
    <string name="app_name">Lantern</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Start</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="default_fragment">Default Fragment</string>
    <string name="receive_lantern">Receive Lantern desktop by email</string>
    <string name="lantern_desktop">Lantern Desktop</string>
    <string name="email_hint">Email</string>
    <string name="send_button">Send Desktop</string>
    <string name="on_text">On</string>
    <string name="off_text">Off</string>
    <string name="on_desc">You can now access\r\nblocked sites and services</string>
    <string name="off_desc">Click the button to access blocked sites and services</string>
    <string name="desktop_option">Desktop Version</string>
    <string name="contact_option">Contact</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_option">Share</string>
    <string name="quit_option">Quit</string>
    <string name="share_email_native"></string>
    <string name="share_email_subject">Lantern Android</string>
    <string name="fatal_error">Lantern encountered a fatal error and is no longer running</string>
    <string name="share_twitter">Check out Lantern Android: https://github.com/getlantern/lantern/blob/lantern-mobile/src/github.com/getlantern/lantern-mobile/latest-builds/lantern.apk</string>
    <string name="share_facebook">I\'m using Lantern for Android, it\'s available here https://github.com/getlantern/lantern/blob/lantern-mobile/src/github.com/getlantern/lantern-mobile/latest-builds/lantern.apk</string>
    <string name="share_email_gmail">I\'m using Lantern for Android, and I\'ve attached the APK file!</string>
    <string name="share_sms">i\'m using Lantern for Android, download here https://github.com/getlantern/lantern/blob/lantern-mobile/src/github.com/getlantern/lantern-mobile/latest-builds/lantern.apk</string>

    <string name="share_chooser_text">Share Lantern Android</string>
    <string name="success_email">Lantern Desktop has been e-mailed to you!</string>
    <string name="error_email">There was a problem sending you Lantern Desktop. Please try again later.</string>
    <string name="contact_email">team@getlantern.org</string>
    <string name="contact_message">Help Me</string>      
    <string name="contact_subject">Lantern Android</string>
    <string name="update_available">A new version of Lantern is available! Would you like to upgrade now?</string>
    <string name="not_now">Not Now</string>
    <string name="install_update">Update</string>
    <string name="error_update">Error Downloading Update</string>
    <string name="manual_update">Try manually installing the latest version from &lt;a href="https://lantern-android.io">here1&lt;/a></string>
    <string name="pro_welcome_text">Welcome to Lantern PRO!</string>
    <string name="thanks_purchase">Thanks for your purchase of Lantern PRO!</string>
    <string name="start_inviting">\r\nStart inviting!</string>
    <string name="invite_friends">Enter your e-mail to receive a code to share with your friends. Get a free month of PRO when they sign up!</string>
    <string name="invite_friends_welcome">Invite friends and you will both get a free month of Lantern PRO when they sign up.</string>
    <string name="invite_friends_btn">Invite Friends</string>
    <string name="continue_to_pro">Continue to PRO</string>
    <string name="get_free_months">Get Free Months</string>
    <string name="text_invite">Text Invite</string>
    <string name="email_invite">Email Invite</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="get_code">Get Code</string>
    <string name="get_code_text">Enter your email to receive a code to share with your friends, get a free month of PRO when they sign up!</string>
    <string name="enter_your_email">Enter your email to receive a referral code</string>
    <string name="previous_code">If you have previously received a referral code\r\nplease make sure to use the same email address.</string>
    <string name="payment_plans">Lantern PRO Payment Plans</string>
    <string name="features_text">Lantern PRO Features</string>
    <string name="features_list"><![CDATA[ &#8226; Faster Connection Speed<br/>&#8226; Smarter Servers<br/>&#8226; Stronger Blocking Resistance ]]></string>
	<string name="checkout">Checkout</string>
	<string name="com.stripe.publishable_key">your-live-publishable-key</string>
    <string name="cvc">CVC</string>
    <string name="card_number">Card Number</string>
    <string name="validation_errors">Validation Errors</string>
    <string name="ok">Ok</string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="progressMessage2">Retrieving referral code</string>
    <string name="language">Language</string>
    <string name="sign_in_pro">Sign in to PRO</string>
    <string name="sign_in_list"><![CDATA[ &#8226; Enter your email and we will send you a link<br/>&#8226; Click the link to authorize this device to use your Lantern Pro account ]]></string>
    <string name="send_link">Send Link</string>
    <string name="click_button">Click the button to access blocked sites and services</string>
    <string name="lantern_pro">Lantern Pro</string>
    <string name="invite_friends_header">Invite friends</string>
    <string name="pro_desc">Faster, Smarter, more Resilient</string>
    <string name="free_month">Get a free month of pro for each sign up</string>
    <string name="get_pro_now">Get Pro Now</string>
    <string name="select">Select</string>
    <string name="twelve_months">for 12 months</string>
    <string name="one_month">for 1 month</string>
    <string name="best_value">Best VALUE!</string>
    <string name="referral_code">Referral Code (optional)</string>
    <string name="total">Total:</string>
    <string name="pro_account_header">Pro Account Management</string>
    <string name="pro_account_text">You currently have a Lantern Pro yearly account. Your account will be automatically charged for another year at the end of the billing cycle.</string>
    <string name="cancel_pro_account">Cancel Pro Account</string>
</resources>
