<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:baselineAligned="false"
    android:id="@+id/proAccountView"
    tools:context=".ProAccountActivity">

     <RelativeLayout
        android:id="@+id/navInvite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/pro_blue_color"
        android:paddingTop="15dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/proAccountAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/proAccountAvatar"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/inviteHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginTop="14dp"
                android:paddingLeft="10dp"
                android:text="@string/pro_account_header"
                android:textSize="15sp"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>


     <RelativeLayout
        android:id="@+id/pro_account"
        android:layout_width="fill_parent"
        android:layout_height="202dp"
        android:layout_weight="1"
        android:background="@color/pro_blue_color"
        android:elevation="2dp">

        <ImageView
            android:id="@+id/account_management"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/account_management"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/invite_bottom_sheet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F4F6F6"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_weight="1"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/get_code_view"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pro_account_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="14dp"
                android:text="@string/pro_account_text"
                android:textSize="14sp"
                android:padding="20dp"
                android:alpha=".87"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/cancelAccount"
                android:layout_height="36dp"
                android:layout_width="216dp"
                android:layout_marginTop="40dp"
                android:text="@string/cancel_pro_account"
                android:fontFamily="sans-serif-medium" 
                android:textSize="14sp"
                android:elevation="2dp"
                android:minHeight="48dp"
                android:textAllCaps="true"
                android:textColor="@color/accent_white"
                android:textStyle="bold"
                android:clickable = "true"
                android:background="#0297A7"
                android:layout_centerInParent="true"
                android:onClick="continueToPro" />


        </LinearLayout>

    </RelativeLayout>

 
 

</LinearLayout>
