<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:clickable="true"
        android:adjustViewBounds="true"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:src="@drawable/menu" />
    </RelativeLayout>

    <!-- The main content view -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" 
<<<<<<< HEAD
        android:layout_width="match_parent"
        android:layout_height="fill_parent" 
        android:id="@+id/mainView"
        android:gravity="center"
        tools:context=".LanternMainActivity">

=======
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="18dp"
        android:paddingLeft="18dp"
        android:id="@+id/mainView"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LanternMainActivity">
>>>>>>> valencia
        <ToggleButton
            android:id="@+id/powerLantern"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"   
            android:background="@drawable/toggle_switch"
<<<<<<< HEAD
            android:layout_marginLeft="117dp"
            android:layout_marginTop="140dp"
=======
            android:layout_marginLeft="65dp"
>>>>>>> valencia
            android:layout_gravity="center"
            android:checked="false"
            android:text="ToggleButton"
            android:textOff=""
            android:textOn="" />
<<<<<<< HEAD

        <TextView
            android:id="@+id/on_off_desc"
            android:layout_width="wrap_content"        
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxWidth="200dp"
            android:text="@string/off_desc"
            android:textSize="14sp"
            android:alpha=".54"
            android:textColor="@color/black"/>


        <LinearLayout 
            android:id="@+id/lantern_pro_section"
            android:orientation="vertical"
            android:background="@color/cyan"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <RelativeLayout 
                android:id="@+id/lantern_pro"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="selectPro"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/speed"/>

                <LinearLayout android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:paddingLeft="90dp"    
                    android:layout_height="fill_parent" 
                    android:layout_width="wrap_content">

                    <TextView
                        android:id="@+id/lantern_pro_header"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="5dp"
                        android:text="@string/lantern_pro"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:alpha=".87"
                        android:textColor="@color/accent_white"/>

                    <TextView
                        android:id="@+id/pro_desc"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:paddingBottom="30dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/pro_desc"
                        android:textSize="14sp"
                        android:alpha=".54"
                        android:textColor="@color/accent_white"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/get_pro_now"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="right"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/get_pro_now"
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    android:textColor="@color/get_btn_text"/>
                   
            </RelativeLayout>

            <View
                android:id="@+id/separator"
                android:background="@color/edittext_color"
                android:layout_below="@+id/lantern_pro"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"
                android:alpha=".54"
                android:layout_centerVertical ="true"
                android:layout_alignParentTop="true"
                />

            <RelativeLayout 
                android:id="@+id/invite_friends"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="selectPro"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/present"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/present"/>


 
                <LinearLayout android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingLeft="125dp"    
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content">

                    <TextView
                        android:id="@+id/invite_friends_header"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="5dp"
                        android:text="@string/invite_friends_header"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:alpha=".87"
                        android:textColor="@color/accent_white"/>

                    <TextView
                        android:id="@+id/free_month"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingBottom="25dp"
                        android:text="@string/free_month"
                        android:textSize="14sp"
                        android:alpha=".54"
                        android:textColor="@color/accent_white"/>
                </LinearLayout>           


                <TextView
                    android:id="@+id/get_free_months"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="right"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/get_free_months"
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    android:textColor="@color/get_btn_text"/>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
=======
    </RelativeLayout>

   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools" 
       android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:id="@+id/desktopView"
        android:visibility="invisible"
        android:background="#F1F1F1"
        tools:context=".LanternMainActivity">

        <!--
        android:background="#39C2D6" -->

        <RelativeLayout
            android:id="@+id/navDesktop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nav_background"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:padding="8dp">

            <ImageView
            android:id="@+id/navAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"/>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/navAvatar"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/desktopText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginTop="14dp"
                android:paddingLeft="10dp"
                android:text="Desktop Version"
                android:textSize="15sp"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="340dp"
            android:layout_height="327dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:elevation="5dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:gravity="center_vertical|bottom">
            
            <ImageView
            android:id="@+id/desktop_graphic"
            android:layout_width="fill_parent"
            android:layout_height="215dp"
            android:layout_gravity="top"
            android:scaleType="centerCrop"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/desktop_graphic"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="300dp"
            android:layout_marginTop="75dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:padding="15dp"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"> 

            <TextView
            android:id="@+id/receive_lantern"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif" 
            android:textSize="16sp"
            android:gravity="center"
            android:singleLine="true"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/receive_lantern"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
            android:id="@+id/sendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif" 
            android:background="@null"
            android:hint="@string/email_hint"
            android:ems="10"
            android:textColor="#BDBDBD"
            android:paddingRight="20dp"
            android:autoText="false"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:gravity="fill_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="textEmailAddress" />

        <View
            android:id="@+id/separator"
            android:background="@color/edittext_color"
            android:layout_below="@+id/sendEmail"
            android:layout_width = "fill_parent"
            android:layout_height="1dip"
            android:layout_centerVertical ="true"
            android:layout_alignParentTop="true"
        />

        <Button
            android:id="@+id/sendBtn"
            android:layout_height="41.5dp"
            android:layout_width="fill_parent"
            android:layout_marginTop="20dp"
            android:text="@string/send_button"
            android:fontFamily="sans-serif" 
            android:textSize="20sp"
            android:elevation="2dp"
            android:minHeight="48dp"
            android:textColor="#fff"
            android:clickable = "false"
            android:background="@drawable/send_btn"
            android:onClick="sendDesktopVersion" />
    </LinearLayout>
</RelativeLayout>
    </RelativeLayout>
   
>>>>>>> valencia

    <!-- The navigation drawer -->
    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:elevation="7.5dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:id="@+id/drawerPane"
        android:layout_gravity="start">

        <!-- Profile Box -->
        <RelativeLayout
            android:id="@+id/profileBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nav_background"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:padding="8dp" >
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/avatar"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="14dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="16dp"
                    android:text="Lantern"
                    android:textSize="15sp"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
        <!-- List of Actions (pages) -->
        <ListView
            android:id="@+id/navList"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/profileBox"
            android:choiceMode="singleChoice"
            android:background="#ffffffff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >
           <TextView
                    android:id="@+id/versionNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Roboto Regular"
                    android:gravity="bottom|center_horizontal"
                    android:paddingBottom="5dp"
                    android:text=""
                    android:textSize="10sp"
                    android:textColor="#767676"
                    android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
